[project]
name = "wealth-edition-2026"
version = "0.1.0"
description = "Downloading and processing Census data for the 2026 wealth edition"
requires-python = ">=3.12"
dependencies = [
    "ipython",
    "ipykernel",
    "pandas",
    "polars",
    "matplotlib",
    "notebook",
    "jupyterlab",
    "pyarrow",
    "black",
    "ruff",
    "pre-commit",
    "jupytext",
    "censusdis>=1.4.2",
    "geopandas>=1.0.1",
    "scikit-learn>=1.9.0",
    "openpyxl>=3.1.5",
    "openai>=2.44.0",
    "marimo>=0.23.11",
    "ell-ai>=0.0.17",
    "tabulate>=0.10.0",
]

[tool.jupytext]
formats = "ipynb,py:percent"
